# 3D-Chess

./: .gitignore  CMakeLists.txt  README.md
classes/: Camera.cpp  Camera.h  ChessBoard.cpp  ChessBoard.h  ChessFigure.cpp  ChessFigure.h  Cube.cpp  Cube.h  DirectionalLight.cpp  DirectionalLight.h  Light.cpp  Light.h  Material.cpp  Material.h  MaterialColor.cpp  MaterialColor.h  MaterialTexture.cpp  MaterialTexture.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  PointLight.cpp  PointLight.h  RawMesh.cpp  RawMesh.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  Skybox.cpp  Skybox.h  SpotLight.cpp  SpotLight.h  Texture2D.cpp  Texture2D.h  error.h  lights.h  materials.h
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
resources/shaders/: board_fragment_shader.fs  board_vertex_shader.vs  chess_piece_fragment_shader.fs  chess_piece_vertex_shader.vs  lightcube_fragment_shader.fs  lightcube_vertex_shader.vs  skybox.vs
src/: main.cpp
